[package]
name = "cassandra"
version = "0.0.1"
authors = [ "tupshin@tupshin.com" ]

[[bin]]
name="basic"
path="src/bin/basic.rs"

[[lib]]
name = "cassandra" # the name of the library to generate
path = "src/cassandra/mod.rs"

[dependencies.rust-cassandra-internal-api]
git = "https://github.com/tupshin/rust-cassandra-internal-api"

[dependencies.hoare]
git = "https://github.com/tupshin/libhoare"
