[package]
name = "cassandra"
version = "0.0.1"
authors = [ "tupshin@tupshin.com" ]

[[bin]]
name="basic"
path="src/bin/basic.rs"

[[bin]]
name="batch"
path="src/bin/batch.rs"

[[bin]]
name="paging"
path="src/bin/paging.rs"

[[bin]]
name="simple"
path="src/bin/simple.rs"

[[bin]]
name="async"
path="src/bin/async.rs"

[[lib]]
name = "cassandra" #
path = "src/cassandra/mod.rs"

[dependencies.rust-cassandra-internal-api]
git = "file:///home/tupshin/rust-cassandra-internal-api"
# git = "https://github.com/tupshin/rust-cassandra-internal-api"


# [dependencies.hoare]
# git = "https://github.com/nick29581/libhoare.git"
